# Game_analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.celery  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  results.db
api/: models.py  serializers.py  sql.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_developer_game_developers.py
game_analytics/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
